--- a/_config.yml
+++ b/_config.yml
@@ -5,16 +5,18 @@ logo: "/images/picture.png?raw=true"
 description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
-  <a href="https://www.linkedin.com/in/chriskhanhtran/">LinkedIn</a> |
-  <a href="https://github.com/chriskhanhtran">GitHub</a>
+  <a href="https://linkedin.com/in/indrik-wijaya">LinkedIn</a> |
+  <a href="https://github.com/indrikwijaya">GitHub</a>
   </p>
   
   <p align="justify">
-  I am pursing MS degree in Business Analytics at Simon Business School, University of Rochester.
+  A Math enthusiast with deep passion in applying mathematical and computational analysis to tackle many complex problems such as aging and healthcare.
   <br><br>
-  I am currently a Machine Learning Research Intern at Skim AI Technologies with a focus on NLP and Deep Learning research.
+  Started my career by employing statistical techniques and machine learning algorithms to investigate the translational regulation in the mitochondria during brown fat differentiation.
+  <br><br>
+  Currently focusing on tackling and universal problems of aging by exploiting multi-omics data through developing and applying state-of-the-art bioinformatics and machine learning pipelines.
   <br><br>
   </p>
   
 theme: jekyll-theme-minimal
-google_analytics: UA-145578661-1 # Google Analytics tracking ID
+#google_analytics: UA-145578661-1 # Google Analytics tracking ID
