--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: <p align="center"> Chris Tran </p>
+title: <p align="center"> Indrik Wijaya </p>
 
-logo: "/images/picture.png?raw=true"
+logo: "/images/grad_photo.jpeg"
 
 description:
   <p align="center">
@@ -10,7 +10,7 @@ description:
   </p>
   
   <p align="justify">
-  A Math enthusiast with deep passion in applying mathematical and computational analysis to tackle many complex problems such as aging and healthcare.
+  A Math enthusiast with deep passion in applying mathematical and computational analysis to tackle complex problems such as aging and healthcare.
   <br><br>
   Started my career by employing statistical techniques and machine learning algorithms to investigate the translational regulation in the mitochondria during brown fat differentiation.
   <br><br>
