--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,12 @@ description:
   <a href="https://github.com/indrikwijaya">GitHub</a>
   </p>
   
-  <p align="justify">
-  A Math enthusiast with deep passion in applying mathematical and computational analysis to tackle complex problems such as aging and healthcare.
+  <p align="left">
+  A Math enthusiast with strong passion in applying mathematics and statistics to tackle complex problems such as aging and healthcare.
   <br><br>
   Started my career by employing statistical techniques and machine learning algorithms to investigate the translational regulation in the mitochondria during brown fat differentiation.
   <br><br>
-  Currently focusing on tackling and universal problems of aging by exploiting multi-omics data through developing and applying state-of-the-art bioinformatics and machine learning pipelines.
+  Currently focusing on the universal problem of aging by exploiting multi-omics data through developing and applying state-of-the-art bioinformatics and machine learning pipelines.
   <br><br>
   </p>
   
