--- a/_config.yml
+++ b/_config.yml
@@ -10,11 +10,11 @@ description:
   </p>
   
   <p align="left">
-  A Math enthusiast with strong passion in applying mathematics and statistics to tackle complex problems such as aging and healthcare.
+  A Math enthusiast with a strong passion in applying mathematics and statistics to tackle complex problems in biotechnology and life sciences.
   <br><br>
   Started my career by employing statistical techniques and machine learning algorithms to investigate the translational regulation in the mitochondria during brown fat differentiation.
   <br><br>
-  Currently focusing on the universal problem of aging by exploiting multi-omics data through developing and applying state-of-the-art bioinformatics and machine learning pipelines.
+  Currently characterising the universal problem of aging and responses to drugs by developing and applying state-of-the-art bioinformatics and machine learning pipelines to multi-omics data.
   <br><br>
   </p>
   
