--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,9 @@ description:
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
   <a href="https://linkedin.com/in/indrik-wijaya">LinkedIn</a> |
-  <a href="https://github.com/indrikwijaya">GitHub</a>
+  <a href="https://github.com/indrikwijaya">GitHub</a> |
+  <a href="https://www.cloudskillsboost.google/public_profiles/8fc13e1f-8d84-4a05-a784-0b3c7285e455">Google Cloud</a> |
+  <a href="https://drive.google.com/drive/folders/1oSmNLq3gNf5fvhRNAUsiL_TiEuy_0Xeg">DataCamp</a>
   </p>
   
   <p align="left">
