--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ description:
   <br><br>
   Started my career by employing statistical techniques and machine learning algorithms to investigate the translational regulation in the mitochondria during brown fat differentiation.
   <br><br>
-  Currently characterising the universal problem of aging and responses to drugs by developing and applying state-of-the-art bioinformatics and machine learning pipelines to multi-omics data.
+  Currently characterising the universal problem of aging and responses to drugs by developing and applying state-of-the-art bioinformatics and machine learning pipelines to omics data.
   <br><br>
   </p>
   
